添加自动添加 frontmatter 的脚本并更新文章状态为 Published

--- a/content/posts/《原子习惯》搞笑版实用说明书.md
+++ b/content/posts/《原子习惯》搞笑版实用说明书.md
@@ -1,3 +1,10 @@
+---
+title: 《原子习惯》搞笑版实用说明书
+date: '2025-08-10'
+status: 草稿
+tags: []
+slug: 原子习惯-搞笑版实用说明书
+---
 这本叫《原子习惯》的书到底有啥魔力。忘掉那些“战略层”、“知识层”，这玩意儿说白了就是一本“懒人自救指南”，教你怎么不动声色地，把自己变成一个牛人。
 ---
 
